--- a/config-gateway-dev.yml
+++ b/config-gateway-dev.yml
@@ -5,4 +5,6 @@ learn:
         #- 0:0:0:0:0:0:0:1
         - 127.0.0.1
       interfaceFlush:
-        - user/isRegistered
+        - path: user/isRegistered
+          time: 60
+          count: 5
